# coastal

./: .gitignore  CLAUDE.md  FAQ.md  README.md  THIRD_PARTY.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
coastal/: __init__.py  abm.py  data.py  denoise.py  device.py  flow.py  loss.py  model.py  morphology.py  napari_viz.py  optimize.py  segment.py  track.py  train.py  utils.py  viz.py
docs/: ARCHITECTURE.md  DATA.md  DEAD_ENDS.md  DEV.md  FUTURE.md  JULIA_PORT.md  MILESTONES.md  MORPHOLOGY.md  OPTIMIZATION.md  ROADMAP.md  SEGMENTATION.md  TODO.md  TRACKING.md
docs/todo/: CECELIA_NAPARI_UPSTREAM_PLAN.md  DENOISE_PLAN.md  README.md  TRACKING_SESSION_SUMMARY.md
notebooks/: duck.ai_2026-06-03_10-59-01.txt  duck.ai_2026-06-05_11-44-48.txt  optical_flow.ipynb  pipeline_consensus.ipynb  pytorch_tracking.txt  tracking.ipynb
notebooks/archive/: optical_flow-old.ipynb  treecell-v4.ipynb  treemove-torch-v1.ipynb  treemove-v1.ipynb  treemove-v2.ipynb
scripts/: link_cecelia.sh
tests/: README.md  test_denoise.py  test_device.py  test_flow.py  test_napari_viz.py  test_segment.py  test_utils.py
