[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coastal"
version = "0.1.0"
description = "Cell segmentation via optical flow metrics and learned embeddings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "numpy",
    # headless build: coastal uses cv2 for optical flow only (no imshow/GUI). The GUI build
    # (opencv-python) bundles its own Qt5 plugins AND sets QT_QPA_PLATFORM_PLUGIN_PATH to them on
    # import, which is ABI-incompatible with napari's PyQt5 xcb plugin → segfaults the kernel when a
    # viewer opens. headless avoids that entirely. (napari_viz also guards against a stray GUI build.)
    "opencv-python-headless",
    "torch",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "joblib",
    "matplotlib",
    "tqdm",
    "hmmlearn",
    "shapely",
    "cma",
    "pandas",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
# Notebook glue only — the coastal/ package itself stays array-only (no cecelia/zarr/btrack
# imports). The demo notebooks additionally need:
#   - btrack           (tracking; pip-installable, listed below)
#   - the cecelia IO helpers, installed separately as an editable path dep — NOT a PyPI package:
#         pip install -e <cecelia-pineapple>/python      # import name `cecelia`
notebooks = [
    "btrack",
]
# Interactive viewers (coastal.napari_viz). napari AND cecelia are lazily imported — only needed when
# you call show_images/show_segmentation/show_tracks (so `import coastal` stays cecelia-free; the glue
# calls it at call-time, like the notebooks). Those show_* helpers DELEGATE the layer conventions to
# cecelia.utils.napari_utils (single source of truth), so coastal renders like cecelia's viewer. Needs
# a display (Qt) + the editable cecelia dep (see the notebooks extra).
napari = [
    "napari>=0.7",
    "pyqt5>=5.15",
]

[tool.setuptools]
packages = ["coastal"]
